# solana_ed25519_ex

./: .gitignore  README.md  mix.exs
lib/: keypair.ex  solana_ed.ex  solana_ed25519.ex  struct.ex
native/solanaed/: Cargo.toml  README.md
native/solanaed/src/: lib.rs
test/: solana_ed25519_test.exs  solana_ed_test.exs
